[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prototype/Dialog/TestDialogNPC/TestDialogNPC.gd" type="Script" id=1]
[ext_resource path="res://Prototype/icon.png" type="Texture" id=2]
[ext_resource path="res://Prototype/Dialog/TestDialogNPC/chat_bubble.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 73.5, 42.5 )

[node name="NPC" type="Area2D"]
position = Vector2( 675, 535 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -3.5 )
shape = SubResource( 2 )

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ChatBubble" type="Sprite" parent="."]
visible = false
position = Vector2( 38, -78 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[connection signal="body_shape_entered" from="." to="." method="_on_NPC_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_NPC_body_shape_exited"]
